src/main/java/org/seaborne/bnf/parser/javacc/EBNFParser.java
/* EBNFParser.java */
/* Generated By:JavaCC: Do not edit this line. EBNFParser.java */
package org.seaborne.bnf.parser.javacc;

import org.seaborne.bnf.parser.*;

public class EBNFParser extends BNFParser implements EBNFParserConstants {

  final public void Unit() throws ParseException {
    Grammar();
}

  final public void Grammar() throws ParseException {Rule rule;
startGrammar();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case NONTERMINAL:
    case WORD:{
      rule = Rule();
emitRule(rule);
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case SEMI:{
          ;
          break;
          }
        default:
          jj_la1[0] = jj_gen;
          break label_1;
        }
        jj_consume_token(SEMI);
        rule = Rule();
emitRule(rule);
      }
      jj_consume_token(DOT);
      break;
      }
    default:
      jj_la1[1] = jj_gen;
      ;
    }
finishGrammar();
    jj_consume_token(0);
}

  final public Rule Rule() throws ParseException {Identifier identifier ; Expression expr; Rule rule;
startRule();
    identifier = Identifier();
    jj_consume_token(ASSIGN);
    expr = Expression();
rule = createRule(identifier, expr);
      finishRule();
      {if ("" != null) return rule;}
    throw new Error("Missing return statement in function");
}

  final public Expression Expression() throws ParseException {Expression expr;
startExpression() ;
    expr = Alternatives();
finishExpression() ;
{if ("" != null) return expr;}
    throw new Error("Missing return statement in function");
}

  final public Expression Alternatives() throws ParseException {Expression expr ;
startAlternatives() ;
    expr = Sequence();
emitAlternativesElement(expr);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case OR:{
        ;
        break;
        }
      default:
        jj_la1[2] = jj_gen;
        break label_2;
      }
      jj_consume_token(OR);
      expr = Sequence();
emitAlternativesElement(expr);
    }
expr = collectedAlternatives();
finishAlternatives() ;
{if ("" != null) return expr;}
    throw new Error("Missing return statement in function");
}

  final public Expression Sequence() throws ParseException {Expression expr;
startSequence() ;
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case LPAREN:
      case NONTERMINAL:
      case QUOTED_STRING:
      case WORD:{
        ;
        break;
        }
      default:
        jj_la1[3] = jj_gen;
        break label_3;
      }
      expr = Unary();
emitSequenceElement(expr);
    }
expr = collectedSequence();
finishSequence() ;
{if ("" != null) return expr;}
    throw new Error("Missing return statement in function");
}

  final public Expression Unary() throws ParseException {Expression expr; Token mod = null;
    expr = Primary();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case STAR:
    case PLUS:
    case QUERY:{
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case QUERY:{
        mod = jj_consume_token(QUERY);
expr = createExprZeroOrOne(expr);
        break;
        }
      case STAR:{
        mod = jj_consume_token(STAR);
expr = createExprZeroOrMore(expr);
        break;
        }
      case PLUS:{
        mod = jj_consume_token(PLUS);
expr = createExprOneOrMore(expr);
        break;
        }
      default:
        jj_la1[4] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
      }
    default:
      jj_la1[5] = jj_gen;
      ;
    }
{if ("" != null) return expr;}
    throw new Error("Missing return statement in function");
}

  final public Expression Primary() throws ParseException {Token t; Expression expr;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case NONTERMINAL:{
      t = jj_consume_token(NONTERMINAL);
{if ("" != null) return createNonTerminal(t.image);}
      break;
      }
    case WORD:{
      t = jj_consume_token(WORD);
{if ("" != null) return createWord(t.image);}
      break;
      }
    case QUOTED_STRING:{
      t = jj_consume_token(QUOTED_STRING);
{if ("" != null) return createQuotedString(t.image);}
      break;
      }
    case LPAREN:{
      jj_consume_token(LPAREN);
      expr = Expression();
      jj_consume_token(RPAREN);
{if ("" != null) return expr;}
      break;
      }
    default:
      jj_la1[6] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
}

// LHS
  final public Identifier Identifier() throws ParseException {Token t;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case NONTERMINAL:{
      t = jj_consume_token(NONTERMINAL);
{if ("" != null) return createNonTerminal(t.image);}
      break;
      }
    case WORD:{
      t = jj_consume_token(WORD);
{if ("" != null) return createWord(t.image);}
      break;
      }
    default:
      jj_la1[7] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
}

  /** Generated Token Manager. */
  public EBNFParserTokenManager token_source;
  SimpleCharStream jj_input_stream;
  /** Current token. */
  public Token token;
  /** Next token. */
  public Token jj_nt;
  private int jj_ntk;
  private int jj_gen;
  final private int[] jj_la1 = new int[8];
  static private int[] jj_la1_0;
  static {
	   jj_la1_init_0();
	}
	private static void jj_la1_init_0() {
	   jj_la1_0 = new int[] {0x8000,0x10020000,0x20,0x10820200,0x1c0,0x1c0,0x10820200,0x10020000,};
	}

  /** Constructor with InputStream. */
  public EBNFParser(java.io.InputStream stream) {
	  this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public EBNFParser(java.io.InputStream stream, String encoding) {
	 try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
	 token_source = new EBNFParserTokenManager(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 8; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream) {
	  ReInit(stream, null);
  }
  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream, String encoding) {
	 try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
	 token_source.ReInit(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 8; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public EBNFParser(java.io.Reader stream) {
	 jj_input_stream = new SimpleCharStream(stream, 1, 1);
	 token_source = new EBNFParserTokenManager(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 8; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.Reader stream) {
	if (jj_input_stream == null) {
	   jj_input_stream = new SimpleCharStream(stream, 1, 1);
	} else {
	   jj_input_stream.ReInit(stream, 1, 1);
	}
	if (token_source == null) {
 token_source = new EBNFParserTokenManager(jj_input_stream);
	}

	 token_source.ReInit(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 8; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public EBNFParser(EBNFParserTokenManager tm) {
	 token_source = tm;
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 8; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(EBNFParserTokenManager tm) {
	 token_source = tm;
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 8; i++) jj_la1[i] = -1;
  }

  private Token jj_consume_token(int kind) throws ParseException {
	 Token oldToken;
	 if ((oldToken = token).next != null) token = token.next;
	 else token = token.next = token_source.getNextToken();
	 jj_ntk = -1;
	 if (token.kind == kind) {
	   jj_gen++;
	   return token;
	 }
	 token = oldToken;
	 jj_kind = kind;
	 throw generateParseException();
  }


/** Get the next Token. */
  final public Token getNextToken() {
	 if (token.next != null) token = token.next;
	 else token = token.next = token_source.getNextToken();
	 jj_ntk = -1;
	 jj_gen++;
	 return token;
  }

/** Get the specific Token. */
  final public Token getToken(int index) {
	 Token t = token;
	 for (int i = 0; i < index; i++) {
	   if (t.next != null) t = t.next;
	   else t = t.next = token_source.getNextToken();
	 }
	 return t;
  }

  private int jj_ntk_f() {
	 if ((jj_nt=token.next) == null)
	   return (jj_ntk = (token.next=token_source.getNextToken()).kind);
	 else
	   return (jj_ntk = jj_nt.kind);
  }

  private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  private int[] jj_expentry;
  private int jj_kind = -1;

  /** Generate ParseException. */
  public ParseException generateParseException() {
	 jj_expentries.clear();
	 boolean[] la1tokens = new boolean[29];
	 if (jj_kind >= 0) {
	   la1tokens[jj_kind] = true;
	   jj_kind = -1;
	 }
	 for (int i = 0; i < 8; i++) {
	   if (jj_la1[i] == jj_gen) {
		 for (int j = 0; j < 32; j++) {
		   if ((jj_la1_0[i] & (1<<j)) != 0) {
			 la1tokens[j] = true;
		   }
		 }
	   }
	 }
	 for (int i = 0; i < 29; i++) {
	   if (la1tokens[i]) {
		 jj_expentry = new int[1];
		 jj_expentry[0] = i;
		 jj_expentries.add(jj_expentry);
	   }
	 }
	 int[][] exptokseq = new int[jj_expentries.size()][];
	 for (int i = 0; i < jj_expentries.size(); i++) {
	   exptokseq[i] = jj_expentries.get(i);
	 }
	 return new ParseException(token, exptokseq, tokenImage);
  }

  private boolean trace_enabled;

/** Trace enabled. */
  final public boolean trace_enabled() {
	 return trace_enabled;
  }

  /** Enable tracing. */
  final public void enable_tracing() {
  }

  /** Disable tracing. */
  final public void disable_tracing() {
  }

                                           }
